--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.13.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "drizzle-kit": "^0.21.2",
     "drizzle-orm": "^0.30.10",
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.0",
     "postgres": "^3.4.4",
     "prettier": "^3.2.5",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
@@ -30,6 +31,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^0.9.3",
     "@types/pg": "^8.11.6",
+    "@types/socket.io": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
